slurm-19484929.out
 'tryton/binutils/2.34' load complete.
 'tryton/compiler/gcc/7.4' load complete.
 'tryton/python3/3.5.6' load complete.

Loading tryton/python3/3.5.6
  Loading requirement: tryton/binutils/2.34 tryton/compiler/gcc/7.4
  File "<stdin>", line 227
    FinalStateB = np.trace(np.array(optimized_dynamics.states[i]*optimized_dynamics.states[i].dag()).reshape(2,2,2,2,2,2,2,2,2,2,2,2,2,2), axis1=0, axis2=7)
              ^
IndentationError: expected an indented block
